--- a/top-100.html
+++ b/top-100.html
@@ -272,6 +272,13 @@
                 padding: 25px;
             }
         }
+            /* Mobile table fix */
+        @media (max-width: 768px) {
+            thead th {
+                position: relative !important;
+                top: 0 !important;
+            }
+        }
     </style>
 </head>
 <body>
